[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-link-master"
version = "0.1.0"
description = "Auto-linker and dashboard utilities for Obsidian vaults"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Medici Tech" }]
requires-python = ">=3.9"
keywords = ["obsidian", "auto-linker", "llm", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32.0",
    "PyYAML>=6.0",
    "tqdm>=4.67.0",
    "rich>=13.0.0",
    "psutil>=7.1.0",
    "pydantic>=2.0.0",
    "anthropic>=0.18.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.6.0",
    "build>=1.2.1",
    "coverage[toml]>=7.2.7",
]

[project.urls]
Homepage = "https://github.com/medici-tech/Obsidain-Link-Master"
Repository = "https://github.com/medici-tech/Obsidain-Link-Master.git"

[project.scripts]
obsidian-link-master = "obsidian_link_master.cli:main"

[tool.setuptools]
packages = ["obsidian_link_master"]
py-modules = [
    "obsidian_auto_linker_enhanced",
    "config_utils",
    "live_dashboard",
    "logger_config",
    "memory_monitor",
    "run",
    "run_with_dashboard",
    "check_memory",
    "enhanced_analytics",
    "ultra_detailed_analytics",
    "config_schema",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

